# learn_cpp

./: .gitigonre  CMakeLists.txt  app  build.sh  main.cpp  myFunctions.cpp  myFunctions.h  typedefs.h
